<?xml version="1.0"?>
<package>
  <name>krb100m_msg</name>
  <version>0.1.4</version>
  <description>
    Message and service types: custom messages and services for krb100m packages
  </description>
  <license>Apache License 2.0</license>
  <author email="251349552@qq.com">rcwind</author>
  <maintainer email="251349552@qq.com">rcwind</maintainer>
  <url type="repository">https://github.com/rcwind/krb100m_msg</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
